Translation of messagebox messages.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -18,11 +18,13 @@
   "avatar" : "Avatar",
   "avatar-placeholder" : "Avatar placeholder",
   "avatar-shape" : "Avatar shape",
+  "avatar-too-small" : "Avatar image size should be at least 100x100 pixels.",
   "back-to-feed" : "← {feed}",
   "bio" : "Bio",
   "bold" : "Bold",
   "bottom" : "Bottom",
   "cancel" : "Cancel",
+  "cannot-resolve-name " : "Cannot resolve name:",
   "caption" : "Caption",
   "change" : "Change",
   "change-date-time" : "Change Date/Time",
@@ -32,6 +34,7 @@
   "change-password-ellipsis" : "Change Password...",
   "client-settings-changed-conflict" : "Client settings were changed by somebody.",
   "clipboard-contains-formatting" : "The clipboard contains text with formatting. Do you want to paste the text with formatting tags?",
+  "clock-differ" : "<b>Warning:</b> Clock in your computer significantly differ from the real time. This may affect cryptographic algorithms and cause problems for Moera client. It is recommended to turn clock synchronization on in your operating system.",
   "close" : "Close",
   "comment-button" : "Comment",
   "comment-edited-conflict" : "The comment was edited by somebody.",
@@ -74,6 +77,7 @@
   "deleting" : "Deleting...",
   "description" : "Description",
   "disconnect" : "Disconnect",
+  "disconnected-from-home" : "You have been disconnected from your home blog.",
   "discussion-closed" : "Discussion is closed",
   "domain" : "Domain",
   "domain-already-taken" : "Domain is already taken",
@@ -116,6 +120,7 @@
   "edit-post-title" : "Edit Post",
   "edit-profile" : "Edit Profile",
   "e-mail" : "E-mail",
+  "email-not-set" : "Unfortunately, E-mail address for blog <b>{location}</b> is not set, so automatic password reset is impossible. Please, contact your Moera provider or server owner to find alternative ways to reset the password.",
   "enable-oppose-reactions" : "Enable \"Oppose\" reactions",
   "enable-reactions" : "Enable reactions",
   "enter-name" : "Enter name...",
@@ -261,6 +266,7 @@
   "no" : "No",
   "no-actions" : "No actions",
   "no-addons" : "No add-ons loaded.",
+  "node-name-not-exists" : "No node with such name exist.",
   "node-settings-changed-conflict" : "Blog settings were changed by somebody.",
   "no-name-known" : "no name known",
   "no-name-set" : "no name set",
@@ -388,6 +394,7 @@
   "reset-password-hint-instructions" : "A message was sent to your E-mail address <b>{emailHint}</b> with a secret code needed to reset the password. Please enter it in the field below.",
   "reset-password-instructions" : "To reset the password, please enter the name or the URL of your blog.",
   "reset-to-default" : "Reset to default",
+  "reset-token-expired" : "Secret code is expired",
   "returned-to-beginning" : "You've returned to the beginning",
   "returned-to-end" : "You've returned to the end",
   "retype-password" : "Please type the password again",
@@ -616,6 +623,7 @@
   "uploading-files" : "Uploading {loadedFiles} of {totalFiles} {progress}% ...",
   "upload-or-copy-images" : "<0>Upload images</0> or <1>Copy image</1>",
   "upload-or-copy-or-drop-images" : "<0>Upload images</0> or <1>Copy image</1> or drop them here",
+  "upload-too-large" : "File \"{name}\" cannot be uploaded because its size ({size}) is larger than maximum allowed size ({maxSize})",
   "url" : "URL",
   "used-by-addon" : "Used by add-on:",
   "verify-signature" : "Verify signature",
@@ -641,6 +649,7 @@
   "write-comment-here" : "Write a comment to {mention} here...",
   "write-down-words" : "Please write down or print these words and keep them in a safe place. You will need them for any operations with the name ‘{name}’. <0>If you loose these words, they cannot be recovered and you will completely loose control of your registered name.</0>",
   "written-down-words" : "I have written down all these words",
+  "wrong-reset-token" : "Wrong secret code",
   "yes" : "Yes",
   "you-at-home" : "You are at your home node",
   "you-can-copy-token" : "You can now copy your new token. For security reasons, this cannot be done later.",
