--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -18,11 +18,13 @@
   "avatar" : "Аватар",
   "avatar-placeholder" : "Место для аватара",
   "avatar-shape" : "Форма аватара",
+  "avatar-too-small" : "Размер картинки для аватара должен быть хотя бы 100x100 пикселов",
   "back-to-feed" : "← {feed}",
   "bio" : "О себе",
   "bold" : "Полужирный",
   "bottom" : "В начало",
   "cancel" : "Отмена",
+  "cannot-resolve-name " : "Не удалось разрешить имя:",
   "caption" : "Заголовок",
   "change" : "Изменить",
   "change-date-time" : "Изменить дату/время",
@@ -32,6 +34,7 @@
   "change-password-ellipsis" : "Изменить пароль...",
   "client-settings-changed-conflict" : "Настройки клиента были кем-то изменены.",
   "clipboard-contains-formatting" : "Буфер обмена содержит текст с форматированием. Вставить текст с тегами форматирования?",
+  "clock-differ" : "<b>Предупреждение:</b> Часы на вашем компьютере существенно отличаются от реального времени. Это может повлиять на криптографические алгоритмы и создать проблемы для клиента Moera. Рекомендуется включить синхронизацию времени в вашей операционной системе.",
   "close" : "Закрыть",
   "comment-button" : "Комментировать",
   "comment-edited-conflict" : "Комментарий был кем-то изменён.",
@@ -74,6 +77,7 @@
   "deleting" : "Удаление...",
   "description" : "Описание",
   "disconnect" : "Отключиться",
+  "disconnected-from-home" : "Вы были отключены от вашего домашнего блога.",
   "discussion-closed" : "Обсуждение закрыто",
   "domain" : "Домен",
   "domain-already-taken" : "Домен уже занят",
@@ -116,6 +120,7 @@
   "edit-post-title" : "Редактировать пост",
   "edit-profile" : "Редактировать профиль",
   "e-mail" : "E-mail",
+  "email-not-set" : "К сожалению, адрес e-mail для блога <b>{location}</b> не был задан, поэтому автоматический сброс пароля невозможен. Пожалуйста, свяжитесь с вашим провайдером Moera или владельцем сервера, чтобы найти другие пути для сброса пароля.",
   "enable-oppose-reactions" : "Разрешить неодобрительные реакции",
   "enable-reactions" : "Разрешить реакции",
   "enter-name" : "Введите имя...",
@@ -261,6 +266,7 @@
   "no" : "Нет",
   "no-actions" : "Действий нет",
   "no-addons" : "Нет загруженных дополнений.",
+  "node-name-not-exists" : "Не существует блога с таким именем.",
   "node-settings-changed-conflict" : "Настройки блога были кем-то изменены.",
   "no-name-known" : "неизвестное имя",
   "no-name-set" : "имя не задано",
@@ -388,6 +394,7 @@
   "reset-password-hint-instructions" : "На ваш адрес E-mail <b>{emailHint}</b> было отправлено сообщение с секретным кодом для сброса пароля. Пожалуйста, введите его в поле ниже.",
   "reset-password-instructions" : "Чтобы сбросить пароль, пожалуйста, введите имя или URL вашего блога.",
   "reset-to-default" : "Вернуть значение по умолчанию",
+  "reset-token-expired" : "Секретный код устарел",
   "returned-to-beginning" : "Вы вернулись в начало",
   "returned-to-end" : "Вы вернулись в конец",
   "retype-password" : "Пожалуйста, введите пароль еще раз",
@@ -616,6 +623,7 @@
   "uploading-files" : "Загружается {loadedFiles} из {totalFiles} {progress}% ...",
   "upload-or-copy-images" : "<0>Загрузить картинки</0> или <1>Скопировать картинку</1>",
   "upload-or-copy-or-drop-images" : "<0>Загрузить картинки</0> или <1>Скопировать картинку</1> или перетащите их сюда",
+  "upload-too-large" : "Файл \"{name}\" не может быть загружен, потому что его размер ({size}) больше максимально разрешенного ({maxSize})",
   "url" : "URL",
   "used-by-addon" : "Используется дополнением:",
   "verify-signature" : "Проверить подпись",
@@ -641,6 +649,7 @@
   "write-comment-here" : "Напишите тут комментарий для {mention}...",
   "write-down-words" : "Пожалуйста, запишите или распечатайте эти слова и храните их в безопасном месте. Они вам понадобятся для любых операций с именем ‘{name}’. <0>Если вы потеряете эти слова, их нельзя будет восстановить, и вы полностью потеряете контроль над вашим зарегистрированным именем.</0>",
   "written-down-words" : "Я записал эти слова",
+  "wrong-reset-token" : "Неправильный секретный код",
   "yes" : "Да",
   "you-at-home" : "Это ваш домашний блог",
   "you-can-copy-token" : "Сейчас вы можете скопировать ваш новый токен. По соображениям безопасности, это нельзя будет сделать позднее.",
