--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -18,11 +18,13 @@
   "avatar" : "Аватар",
   "avatar-placeholder" : "Місце для аватара",
   "avatar-shape" : "Форма аватара",
+  "avatar-too-small" : "Розмір картинки для аватара повинен бути хоча б 100x100 пікселів",
   "back-to-feed" : "← {feed}",
   "bio" : "Про себе",
   "bold" : "Жирний",
   "bottom" : "У початок",
   "cancel" : "Відмінити",
+  "cannot-resolve-name " : "Не вдалося розпізнати ім'я:",
   "caption" : "Заголовок",
   "change" : "Змінити",
   "change-date-time" : "Змінити дату/час",
@@ -32,6 +34,7 @@
   "change-password-ellipsis" : "Змінити пароль...",
   "client-settings-changed-conflict" : "Налаштування клієнта були кимось змінені.",
   "clipboard-contains-formatting" : "Буфер обміну містить текст із форматуванням. Вставити текст із тегами форматування?",
+  "clock-differ" : "<b>Попередження:</b> Годинник на вашому комп'ютері істотно відрізняється від реального часу. Це може вплинути на криптографічні алгоритми та створити проблеми для клієнта Moera. Бажано увімкнути синхронізацію часу у вашій операційній системі.",
   "close" : "Закрити",
   "comment-button" : "Коментувати",
   "comment-edited-conflict" : "Коментар був кимось змінений.",
@@ -74,6 +77,7 @@
   "deleting" : "Видалення...",
   "description" : "Опис",
   "disconnect" : "Відключитись",
+  "disconnected-from-home" : "Ви були відключені від вашого домашнього блогу.",
   "discussion-closed" : "Обговорення закрите",
   "domain" : "Домен",
   "domain-already-taken" : "Домен вже зайнятий",
@@ -116,6 +120,7 @@
   "edit-post-title" : "Редагувати пост",
   "edit-profile" : "Редагувати профіль",
   "e-mail" : "E-mail",
+  "email-not-set" : "На жаль, адреса e-mail для блогу <b>{location}</b> не була задана, тому автоматичне скидання пароля неможливе. Будь ласка, зв'яжіться з вашим провайдером Moera або власником сервера, щоб знайти інші шляхи для скидання пароля.",
   "enable-oppose-reactions" : "Дозволити несхвальні реакції",
   "enable-reactions" : "Дозволити реакції",
   "enter-name" : "Введіть ім'я...",
@@ -261,6 +266,7 @@
   "no" : "Ні",
   "no-actions" : "Дій немає",
   "no-addons" : "Немає завантажених додатків.",
+  "node-name-not-exists" : "Не існує блогу з цим ім'ям.",
   "node-settings-changed-conflict" : "Налаштування блога були кимось змінені.",
   "no-name-known" : "невідоме ім'я",
   "no-name-set" : "ім'я не задано",
@@ -388,6 +394,7 @@
   "reset-password-hint-instructions" : "На вашу адресу E-mail <b>{emailHint}</b> було надіслано повідомлення із секретним кодом для скидання пароля. Будь ласка, введіть його у поле нижче.",
   "reset-password-instructions" : "Щоб скинути пароль, будь ласка, введіть ім'я або URL вашого блогу.",
   "reset-to-default" : "Повернути значення за замовчуванням",
+  "reset-token-expired" : "Секретний код застарів",
   "returned-to-beginning" : "Ви повернулися до початку",
   "returned-to-end" : "Ви повернулися у кінець",
   "retype-password" : "Будь ласка, введіть пароль ще раз",
@@ -616,6 +623,7 @@
   "uploading-files" : "Надсилається {loadedFiles} з {totalFiles} {progress}% ...",
   "upload-or-copy-images" : "<0>Надіслати картинки</0> або <1>Скопіювати картинку</1>",
   "upload-or-copy-or-drop-images" : "<0>Надіслати картинки</0> або <1>Скопіювати картинку</1> або перетягніть їх сюди",
+  "upload-too-large" : "Файл \"{name}\" не може бути надісланий, тому що його розмір ({size}) більший за максимально дозволений ({maxSize})",
   "url" : "URL",
   "used-by-addon" : "Використовується додатком:",
   "verify-signature" : "Перевірити підпис",
@@ -641,6 +649,7 @@
   "write-comment-here" : "Напишіть тут коментар для {mention}...",
   "write-down-words" : "Будь ласка, запишіть або роздрукуйте ці слова та зберігайте їх у безпечному місці. Вони вам знадобляться для будь-яких операцій з ім'ям '{name}'. <0>Якщо ви втратите ці слова, їх не можна буде відновити, і ви повністю втратите контроль над вашим зареєстрованим ім'ям.</0>",
   "written-down-words" : "Я записав ці слова",
+  "wrong-reset-token" : "Невірний секретний код",
   "yes" : "Так",
   "you-at-home" : "Це ваш домашній блог",
   "you-can-copy-token" : "Зараз ви можете скопіювати ваш новий токен. З міркувань безпеки, це не можна буде зробити пізніше.",
