--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -378,6 +378,7 @@
     "too-long" : "Длинно",
     "wow" : "Ого"
   },
+  "read-and-agree-with" : "Я прочёл и согласен с",
   "read-more" : "Читать дальше...",
   "received-mail" : "Уже получил письмо",
   "register" : "Регистрация",
@@ -586,6 +587,7 @@
   "subscriptions" : "Подписки",
   "summary" : "Коротко",
   "support" : "Одобряю",
+  "terms-and-conditions" : "Правилами использования",
   "text" : "Текст",
   "text-contains-formatting" : "Текст содержит форматирование. Вы хотите скопировать текст с тегами форматирования?",
   "text-copied" : "Текст скопирован в буфер обмена",
