--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -378,6 +378,7 @@
     "too-long" : "Довго",
     "wow" : "Ого"
   },
+  "read-and-agree-with" : "Я прочитав і погоджуюсь з",
   "read-more" : "Читати далі...",
   "received-mail" : "Вже отримав листа",
   "register" : "Реєстрація",
@@ -586,6 +587,7 @@
   "subscriptions" : "Підписки",
   "summary" : "Коротко",
   "support" : "Схвалюю",
+  "terms-and-conditions" : "Правилами користування",
   "text" : "Текст",
   "text-contains-formatting" : "Текст містить форматування. Ви бажаєте скопіювати текст із тегами форматування?",
   "text-copied" : "Текст скопійований до буфера обміну",
