Adding/removing friends. Showing friendship status.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -4,6 +4,7 @@
   "add-connection" : "Add connection",
   "add-donation" : "Add Donation",
   "add-donation-button" : "Add donation",
+  "add-friend" : "Add to friends",
   "additional" : "Additional",
   "addons-changed-conflict" : "List of add-ons has been changed.",
   "alert-text" : "Alert text",
@@ -607,6 +608,7 @@
   "transfer-node-name" : "Transfer Name From Another Node",
   "undo" : "Undo",
   "unfollow-comments" : "Unfollow comments",
+  "unfriend" : "Unfriend",
   "unhide" : "Unhide",
   "unhide-my-subscription" : "Unhide my subscription",
   "unhide-subscription-to-me" : "Unhide subscription to me",
