--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -4,6 +4,7 @@
   "add-connection" : "Добавить соединение",
   "add-donation" : "Добавить донат",
   "add-donation-button" : "Добавить донат",
+  "add-friend" : "Добавить в друзья",
   "additional" : "Дополнительные",
   "addons-changed-conflict" : "Список дополнений был изменён.",
   "alert-text" : "Текст предупреждения",
@@ -607,6 +608,7 @@
   "transfer-node-name" : "Переместить имя с другого узла",
   "undo" : "Отменить",
   "unfollow-comments" : "Не следить за комментариями",
+  "unfriend" : "Удалить из друзей",
   "unhide" : "Раскрыть",
   "unhide-my-subscription" : "Раскрыть мою подписку",
   "unhide-subscription-to-me" : "Раскрыть подписку на меня",
