--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -4,6 +4,7 @@
   "add-connection" : "Додати з'єднання",
   "add-donation" : "Додати донат",
   "add-donation-button" : "Додати донат",
+  "add-friend" : "Додати до друзів",
   "additional" : "Додаткові",
   "addons-changed-conflict" : "Список додатків був змінений.",
   "alert-text" : "Текст попередження",
@@ -607,6 +608,7 @@
   "transfer-node-name" : "Перемістити ім'я з іншого вузла",
   "undo" : "Скасувати",
   "unfollow-comments" : "Не слідкувати за коментарями",
+  "unfriend" : "Вилучити з друзів",
   "unhide" : "Розкрити",
   "unhide-my-subscription" : "Розкрити мою підписку",
   "unhide-subscription-to-me" : "Розкрити підписку на мене",
