Changing groups of a friend.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -30,6 +30,7 @@
   "change" : "Change",
   "change-date-time" : "Change Date/Time",
   "change-date-time-ellipsis" : "Change date/time...",
+  "change-friend-groups" : "Change groups of the friend {name}",
   "change-home-password" : "Change Home Password",
   "change-password" : "Change Password",
   "change-password-ellipsis" : "Change Password...",
@@ -144,6 +145,7 @@
   "forgot-home-password" : "Forgot Home Password",
   "forgot-password" : "Forgot password",
   "formatting-hint" : "<0>Markdown:</0> see <1>cheatsheet</1> or <2>tutorial</2> to see how to do more. See also <3>emoji cheatsheet</3>.",
+  "friend-groups" : "Groups of friends...",
   "from-computer" : "From Computer",
   "from-device" : "From Device",
   "from-internet" : "From Internet",
