--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -30,6 +30,7 @@
   "change" : "Изменить",
   "change-date-time" : "Изменить дату/время",
   "change-date-time-ellipsis" : "Изменить дату/время...",
+  "change-friend-groups" : "Изменить группы {gender, select, female {подруги} other {друга}} {name}",
   "change-home-password" : "Изменить домашний пароль",
   "change-password" : "Изменить пароль",
   "change-password-ellipsis" : "Изменить пароль...",
@@ -144,6 +145,7 @@
   "forgot-home-password" : "Забыл домашний пароль",
   "forgot-password" : "Забыл пароль",
   "formatting-hint" : "<0>Markdown:</0> загляните в <1>шпаргалку</1> или <2>учебник</2>, чтобы узнать о других возможностях. См. также <3>шпаргалку по эмодзи</3>.",
+  "friend-groups" : "Группы друзей...",
   "from-computer" : "С компьютера",
   "from-device" : "С устройства",
   "from-internet" : "Из Интернета",
