--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -30,6 +30,7 @@
   "change" : "Змінити",
   "change-date-time" : "Змінити дату/час",
   "change-date-time-ellipsis" : "Змінити дату/час...",
+  "change-friend-groups" : "Змінити групи {gender, select, female {подруги} other {друга}} {name}",
   "change-home-password" : "Змінити домашній пароль",
   "change-password" : "Змінити пароль",
   "change-password-ellipsis" : "Змінити пароль...",
@@ -144,6 +145,7 @@
   "forgot-home-password" : "Забув домашній пароль",
   "forgot-password" : "Забув пароль",
   "formatting-hint" : "<0>Markdown:</0> зазирніть у <1>шпаргалку</1> чи <2>підручник</2>, щоб дізнатися про інші можливості. Див. також <3>шпаргалку з емодзі</3>.",
+  "friend-groups" : "Групи друзів...",
   "from-computer" : "З комп'ютера",
   "from-device" : "З пристрою",
   "from-internet" : "З Інтернету",
