Adding friend groups from the friend groups dialog.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -5,6 +5,7 @@
   "add-donation" : "Add Donation",
   "add-donation-button" : "Add donation",
   "add-friend" : "Add to friends",
+  "add-group" : "Add group",
   "additional" : "Additional",
   "addons-changed-conflict" : "List of add-ons has been changed.",
   "alert-text" : "Alert text",
