--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -5,6 +5,7 @@
   "add-donation" : "Додати донат",
   "add-donation-button" : "Додати донат",
   "add-friend" : "Додати до друзів",
+  "add-group" : "Додати групу",
   "additional" : "Додаткові",
   "addons-changed-conflict" : "Список додатків був змінений.",
   "alert-text" : "Текст попередження",
