Action buttons in instants.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -45,7 +45,7 @@
   "comment-not-found" : "Comment not found",
   "comments" : "Comments",
   "comments-disabled" : "Comments are disabled",
-  "comments-visible-to" : "Comments visible to",
+  "comments-visible-to" : "Comments are visible to",
   "comment-updated-at" : "updated",
   "compress-images" : "Compress images",
   "confirm-password" : "Confirm password",
@@ -163,6 +163,7 @@
   "hide" : "Hide",
   "hide-my-subscription" : "Hide my subscription",
   "hide-subscription-to-me" : "Hide subscription to me",
+  "ignore" : "Ignore",
   "image" : "Image",
   "image-alignment" : {
     "center" : "Center",
@@ -543,10 +544,10 @@
       "remote-comment-verification_lifetime" : "Comment verification information lifetime",
       "remote-posting-verification_lifetime" : "Post verification information lifetime",
       "remote-reaction-verification_lifetime" : "Reaction verification information lifetime",
-      "subscribers_view" : "List of subscribers visible to",
-      "subscribers_view-total" : "Number of subscribers visible to",
-      "subscriptions_view" : "List of subscriptions visible to",
-      "subscriptions_view-total" : "Number of subscriptions visible to",
+      "subscribers_view" : "List of subscribers is visible to",
+      "subscribers_view-total" : "Number of subscribers is visible to",
+      "subscriptions_view" : "List of subscriptions is visible to",
+      "subscriptions_view-total" : "Number of subscriptions is visible to",
       "token_lifetime" : "Authentication token lifetime",
       "webmaster_email" : "Webmaster e-mail",
       "webmaster_name" : "Webmaster name",
@@ -665,6 +666,7 @@
   "your-profile" : "Your profile",
   "your-settings" : "Your Settings",
   "your-timeline" : "Your timeline",
+  "you-subscribed" : "You are subscribed",
   "zoom-in" : "Zoom in",
   "zoom-out" : "Zoom out"
 }
