Notifying about adding to friends and removing from friends.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -209,6 +209,11 @@
       "comment-reaction-added" : "{reactions} your comment {heading} on {posting}",
       "comment-reaction-task-failed" : "Failed to sign a reaction to {commentNode} comment {commentHeading} to {postingNode} post {postingHeading}",
       "comment-update-task-failed" : "Failed to sign the comment {commentHeading} to {node} post {postingHeading}",
+      "friend-added" : "{node} added you to the group of friends \"{group}\"",
+      "friend-added-to-friends" : "{node} added you to {gender, select, female {her} other {his}} friends",
+      "friend-deleted" : "{node} removed you from the group of friends \"{group}\"",
+      "friend-deleted-from-friends" : "{node} removed you from {gender, select, female {her} other {his}} friends",
+      "friend-group-deleted" : "{node} removed the group of friends \"{group}\"",
       "mention-comment" : "{node} mentioned you in a comment {commentHeading} on {posting} {postingHeading}",
       "mention-posting" : "{node} mentioned you in a post {heading}",
       "posting-media-reaction-added" : "{reactions} a media in your post {heading} in {node}",
