--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -209,6 +209,11 @@
       "comment-reaction-added" : "{reactions} ваш комментарий {heading} к {posting}",
       "comment-reaction-task-failed" : "Не удалось подписать реакцию на комментарий {commentNode} {commentHeading} к посту {postingNode} {postingHeading}",
       "comment-update-task-failed" : "Не удалось подписать комментарий {commentHeading} к посту {node} {postingHeading}",
+      "friend-added" : "{node} {gender, select, female {добавила} other {добавил}} вас в группу друзей \"{group}\"",
+      "friend-added-to-friends" : "{node} {gender, select, female {добавила} other {добавил}} вас к себе в друзья",
+      "friend-deleted" : "{node} {gender, select, female {удалила} other {удалил}} вас из группы друзей \"{group}\"",
+      "friend-deleted-from-friends" : "{node} {gender, select, female {удалила} other {удалил}} вас из своих друзей",
+      "friend-group-deleted" : "{node} {gender, select, female {удалила} other {удалил}} группу друзей \"{group}\"",
       "mention-comment" : "{node} {nodeGender, select, female {упомянула} other {упомянул}} вас в комментарии {commentHeading} к {posting} {postingHeading}",
       "mention-posting" : "{node} {nodeGender, select, female {упомянула} other {упомянул}} вас в посте {heading}",
       "posting-media-reaction-added" : "{reactions} картинку в вашем посте {heading} в {node}",
