--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -4,7 +4,7 @@
   "add-connection" : "Додати з'єднання",
   "add-donation" : "Додати донат",
   "add-donation-button" : "Додати донат",
-  "add-friend" : "Додати до друзів",
+  "add-friend" : "Додати у друзі",
   "add-group" : "Додати групу",
   "additional" : "Додаткові",
   "addons-changed-conflict" : "Список додатків був змінений.",
@@ -209,6 +209,11 @@
       "comment-reaction-added" : "{reactions} ваш коментар {heading} до {posting}",
       "comment-reaction-task-failed" : "Не вдалося підписати реакцію на коментар {commentNode} {commentHeading} до посту {postingNode} {postingHeading}",
       "comment-update-task-failed" : "Не вдалося підписати коментар {commentHeading} до посту {node} {postingHeading}",
+      "friend-added" : "{node} {gender, select, female {додала} other {додав}} вас до групи друзів \"{group}\"",
+      "friend-added-to-friends" : "{node} {gender, select, female {додала} other {додав}} вас до себе у друзі",
+      "friend-deleted" : "{node} {gender, select, female {вилучила} other {вилучив}} вас з групи друзів \"{group}\"",
+      "friend-deleted-from-friends" : "{node} {gender, select, female {вилучила} other {вилучив}} вас зі своїх друзів",
+      "friend-group-deleted" : "{node} {gender, select, female {видалила} other {видалив}} групу друзів \"{group}\"",
       "mention-comment" : "{node} {nodeGender, select, female {згадала} other {згадав}} вас у коментарі {commentHeading} до {posting} {postingHeading}",
       "mention-posting" : "{node} {nodeGender, select, female {згадала} other {згадав}} вас у пості {heading}",
       "posting-media-reaction-added" : "{reactions} картинку у вашому пості {heading} у {node}",
