--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -146,6 +146,7 @@
   "forgot-home-password" : "Forgot Home Password",
   "forgot-password" : "Forgot password",
   "formatting-hint" : "<0>Markdown:</0> see <1>cheatsheet</1> or <2>tutorial</2> to see how to do more. See also <3>emoji cheatsheet</3>.",
+  "friend" : "Friend",
   "friend-groups" : "Groups of friends...",
   "from-computer" : "From Computer",
   "from-device" : "From Device",
@@ -181,6 +182,7 @@
     "tiny" : "Tiny"
   },
   "in" : "in",
+  "in-friends" : "In friends",
   "insert-image" : "Insert an image",
   "insert-link" : "Insert a link",
   "insert-mention" : "Insert a mention",
@@ -257,6 +259,7 @@
   "more-reactions-hidden" : "{remaining} more hidden",
   "must-not-empty" : "Must not be empty",
   "must-single-english-word" : "Must be a single English word",
+  "mutual-friends" : "Mutual friends",
   "mutually-subscribed" : "Mutually subscribed",
   "my-client" : "My Client",
   "my-node" : "My Blog",
