Moved hiding/unhiding subscribers/subscriptions to a separate dialog.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -162,6 +162,7 @@
   "height" : "Height",
   "help" : "Help",
   "hide" : "Hide",
+  "hide-ellipsis" : "Hide...",
   "hide-my-subscription" : "Hide my subscription",
   "hide-subscription-to-me" : "Hide subscription to me",
   "ignore" : "Ignore",
@@ -622,8 +623,6 @@
   "unfollow-comments" : "Unfollow comments",
   "unfriend" : "Unfriend",
   "unhide" : "Unhide",
-  "unhide-my-subscription" : "Unhide my subscription",
-  "unhide-subscription-to-me" : "Unhide subscription to me",
   "unknown-name" : "Unknown name",
   "unpin" : "Unpin",
   "unselect-all" : "Unselect all",
