--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -162,6 +162,7 @@
   "height" : "Высота",
   "help" : "Помощь",
   "hide" : "Скрыть",
+  "hide-ellipsis" : "Скрыть...",
   "hide-my-subscription" : "Скрыть мою подписку",
   "hide-subscription-to-me" : "Скрыть подписку на меня",
   "ignore" : "Игнорировать",
@@ -622,8 +623,6 @@
   "unfollow-comments" : "Не следить за комментариями",
   "unfriend" : "Удалить из друзей",
   "unhide" : "Раскрыть",
-  "unhide-my-subscription" : "Раскрыть мою подписку",
-  "unhide-subscription-to-me" : "Раскрыть подписку на меня",
   "unknown-name" : "Неизвестное имя",
   "unpin" : "Открепить",
   "unselect-all" : "Снять выбор",
