--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -162,6 +162,7 @@
   "height" : "Висота",
   "help" : "Допомога",
   "hide" : "Приховати",
+  "hide-ellipsis" : "Приховати...",
   "hide-my-subscription" : "Приховати мою підписку",
   "hide-subscription-to-me" : "Приховати підписку на мене",
   "ignore" : "Ігнорувати",
@@ -622,8 +623,6 @@
   "unfollow-comments" : "Не слідкувати за коментарями",
   "unfriend" : "Вилучити з друзів",
   "unhide" : "Розкрити",
-  "unhide-my-subscription" : "Розкрити мою підписку",
-  "unhide-subscription-to-me" : "Розкрити підписку на мене",
   "unknown-name" : "Невідоме ім'я",
   "unpin" : "Відкріпити",
   "unselect-all" : "Зняти вибір",
