--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -163,6 +163,7 @@
   "help" : "Help",
   "hide" : "Hide",
   "hide-ellipsis" : "Hide...",
+  "hide-friendship" : "Hide friendship",
   "hide-my-subscription" : "Hide my subscription",
   "hide-subscription-to-me" : "Hide subscription to me",
   "ignore" : "Ignore",
