--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -163,6 +163,7 @@
   "help" : "Помощь",
   "hide" : "Скрыть",
   "hide-ellipsis" : "Скрыть...",
+  "hide-friendship" : "Скрыть дружбу",
   "hide-my-subscription" : "Скрыть мою подписку",
   "hide-subscription-to-me" : "Скрыть подписку на меня",
   "ignore" : "Игнорировать",
