--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -163,6 +163,7 @@
   "help" : "Допомога",
   "hide" : "Приховати",
   "hide-ellipsis" : "Приховати...",
+  "hide-friendship" : "Приховати дружбу",
   "hide-my-subscription" : "Приховати мою підписку",
   "hide-subscription-to-me" : "Приховати підписку на мене",
   "ignore" : "Ігнорувати",
