Friendship buttons in the "Added to friends" instant.

--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -669,6 +669,7 @@
   "yes" : "Да",
   "you-at-home" : "Это ваш домашний блог",
   "you-can-copy-token" : "Сейчас вы можете скопировать ваш новый токен. По соображениям безопасности, это нельзя будет сделать позднее.",
+  "you-friends" : "Вы друзья",
   "your-news" : "Ваши новости",
   "your-password" : "Ваш пароль",
   "your-profile" : "Ваш профиль",
