--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -669,6 +669,7 @@
   "yes" : "Yes",
   "you-at-home" : "You are at your home node",
   "you-can-copy-token" : "You can now copy your new token. For security reasons, this cannot be done later.",
+  "you-friends" : "You are friends",
   "your-news" : "Your news",
   "your-password" : "Your password",
   "your-profile" : "Your profile",
