--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -669,6 +669,7 @@
   "yes" : "Так",
   "you-at-home" : "Це ваш домашній блог",
   "you-can-copy-token" : "Зараз ви можете скопіювати ваш новий токен. З міркувань безпеки, це не можна буде зробити пізніше.",
+  "you-friends" : "Ви друзі",
   "your-news" : "Ваші новини",
   "your-password" : "Ваш пароль",
   "your-profile" : "Ваш профіль",
